--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,12 @@
     ],
     "autoload": {
         "psr-4": {
-            "yjballestero\\extensions\\phoneInput\\": "src/"
+            "yjballestero\\phoneInput\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "yjballestero\\tests\\": "tests/"
         }
     },
     "repositories": [
@@ -43,12 +48,15 @@
         "php": ">=8.1.0",
         "giggsey/libphonenumber-for-php": "^8.0@dev",
         "yiisoft/yii2": "~2.0.45",
-        "jackocnr/intl-tel-input": ">=20.0"
+        "jackocnr/intl-tel-input": "~23.0.11"
     },
     "require-dev": {
+        "phpunit/phpunit": "^10.5",
         "roave/security-advisories": "dev-latest"
     },
     "config": {
+        "optimize-autoloader": true,
+        "sort-packages": true,
         "platform": {
             "php": "8.1.4"
         },
